feat(page): add page and remove lhm & update doc
